# pspm

./: .gitignore  404.html  README.md  flake.nix  index.html  mkdocs.yml  pyproject.toml  shell.nix
.github/workflows/: docs.yaml  publish.yaml  ruff.yaml  test.yaml
commands/add/: index.html
commands/init/: index.html
commands/lock/: index.html
commands/remove/: index.html
commands/run/: index.html
commands/sync/: index.html
commands/upgrade/: index.html
commands/version/: index.html
comparisons/: index.html
docs/: .pages  comparisons.md  faq.md  index.md  motivation.md  quick-start.md  templates.md
docs/commands/: .pages  add.md  init.md  install.md  lock.md  remove.md  run.md  sync.md  upgrade.md  version.md
docs/commands/project/: update.md
faq/: index.html
motivation/: index.html
quick-start/: index.html
search/: search_index.json
src/psdm/: cli.py
src/psdm/entities/: toml.py
src/pspm/: __init__.py  __main__.py  cli.py
src/pspm/entities/: __init__.py  command_runner.py  installer.py  package_manager.py  pyproject.py  resolver.py  runner.py  toml.py  venv_runner.py  virtual_env.py
src/pspm/errors/: __init__.py  command.py  dependencies.py
src/pspm/services/: __init__.py  bootstrap.py  dependencies.py  run.py
src/pspm/templates/: README.md.j2  pyproject.toml.j2
src/pspm/utils/: bin_path.py  commands.py  printing.py
templates/: index.html
tests/: test_installer.py  test_package_manager.py  test_pyproject.py  test_resolver.py
