[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "pspm"
version = "0.1.0"
dependencies = [
    "typer",
    "tomli",
    "tomli-w",
]
requires-python = ">=3.8"
authors = [
    { name = "Jahn16", email = "jpdeoliveiraferreira@gmail.com" },
]
description = "A simple Python dependency manager"
readme = "README.md"
keywords = [
    "packaging",
    "dependency",
    "workflow",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python",
]

[project.license]
file = "LICENSE"

[project.scripts]
spm = "pspm.cli:app"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pspm",
]

[tool.ruff]
preview = true
line-length = 79

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY",
    "COM812",
    "S404" # suspicious-subprocess-import
]
extend-safe-fixes = [
    "FA102",
]
exclude = [
    "tests/*",
]

[tool.mypy]
strict = true
exclude = [
    "tests",
]
